--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   mobx_codegen: ^2.1.1
   json_serializable: ^6.6.0
   json_annotation: ^4.8.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
