--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,23 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+
+  #timer
   circular_countdown_timer: ^0.2.3
+
+  #grid view
   staggered_grid_view_flutter: ^0.0.4
+
+  #state management mobx
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
   mobx_codegen: ^2.1.1
   json_serializable: ^6.6.0
   json_annotation: ^4.8.0
   provider: ^6.0.5
+
+  # audio
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +44,4 @@ flutter:
   assets:
     - assets/
     - assets/data/example_data.json
+    - assets/piano-mp3/
