--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: 2.0.3
+  equatable: ^2.0.0
+  collection: ^1.15.0
 
   cupertino_icons: ^1.0.2
 
@@ -24,8 +27,8 @@ dependencies:
   mobx: ^2.1.3
   flutter_mobx: ^2.0.6+5
   mobx_codegen: ^2.1.1
-  json_serializable: ^6.6.0
-  json_annotation: ^4.8.0
+  #json_serializable: ^6.6.0
+  #json_annotation: ^4.8.0
   provider: ^6.0.5
 
   # audio
@@ -40,6 +43,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
+  freezed: 2.0.3
 
 flutter:
   uses-material-design: true
