--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,17 @@ dependencies:
 
   # touchable opacity
   touchable_opacity: ^1.2.0
-  device_preview: ^1.1.0
+  # device_preview: ^1.1.0
   google_fonts: ^4.0.3
+  # app icon
+  flutter_launcher_icons: ^0.12.0
+  # splash 
+  flutter_native_splash: ^2.2.19
+  # package name
+  change_app_package_name: ^1.1.0
+  
+  # ads
+  google_mobile_ads: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +59,18 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   freezed: 2.0.3
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/images/splash2.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo1.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter:
   uses-material-design: true
